fix(heatmap): remove defined svg z-index
related to OPT-2195

--- a/client/src/modules/components/BPMNDiagram/BPMNDiagram.scss
+++ b/client/src/modules/components/BPMNDiagram/BPMNDiagram.scss
@@ -2,7 +2,6 @@
 .djs-container {
   svg {
     position: absolute;
-    z-index: 1;
   }
 
   .djs-overlay-container {
